syntax = "proto3";
package lit.relay.v1;

option go_package = "github.com/genki/lit/genproto/relay";

message VersionVectorEntry {
  string replica_id = 1;
  int64 counter = 2;
}

message VersionVector {
  repeated VersionVectorEntry entries = 1;
}

message OpenSessionRequest {
  string node_id = 1;
  string host = 2;
  string crdt_version = 3;
  VersionVector local_vector = 4;
  string auth_token = 5;
}

message OpenSessionResponse {
  string session_id = 1;
  VersionVector relay_vector = 2;
  repeated string missing_log_ranges = 3;
}

message Operation {
  uint64 op_id = 1;
  string file_path = 2;
  bytes payload = 3; // CRDT-encoded delta or metadata
  string media_type = 4;
  bool is_blob = 5;
  int64 timestamp = 6;
}

message SnapshotMeta {
  string snapshot_id = 1;
  repeated string scope_paths = 2;
  int64 created_at = 3;
  uint64 size_bytes = 4;
}

message Label {
  string label_id = 1;
  string name = 2;
  string note = 3;
  uint64 from_op = 4;
  uint64 to_op = 5;
}

message OperationEnvelope {
  string session_id = 1;
  oneof payload {
    Operation operation = 2;
    SnapshotMeta snapshot = 3;
    Label label = 4;
  }
  bytes checksum = 5;
}

message Ack {
  string session_id = 1;
  uint64 last_applied_op = 2;
  string error = 3;
}

message FetchSnapshotRequest {
  string session_id = 1;
  string snapshot_id = 2;
}

message SnapshotChunk {
  string snapshot_id = 1;
  bytes data = 2;
  uint32 index = 3;
  uint32 total = 4;
}

message ListRefsRequest {
  string session_id = 1;
}

message LabelRef {
  string label_id = 1;
  string name = 2;
  uint64 to_op = 3;
}

message BlobRef {
  string path = 1;
  string version_id = 2;
}

message ListRefsResponse {
  repeated LabelRef labels = 1;
  repeated string snapshots = 2;
  repeated BlobRef blobs = 3;
}

message FetchBlobRequest {
  string session_id = 1;
  string path = 2;
  string version_id = 3;
}

message FetchBlobResponse {
  bytes data = 1;
}

message HeartbeatRequest {
  string session_id = 1;
}

message HeartbeatResponse {
  string session_id = 1;
  string status = 2;
}

service RelayService {
  rpc OpenSession(OpenSessionRequest) returns (OpenSessionResponse);
  rpc StreamOps(stream OperationEnvelope) returns (stream Ack);
  rpc FetchSnapshot(FetchSnapshotRequest) returns (stream SnapshotChunk);
  rpc ListRefs(ListRefsRequest) returns (ListRefsResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc FetchBlob(FetchBlobRequest) returns (FetchBlobResponse);
}
